# azure

./: README.md  az_204.md  deploy_node_function_to_function_app.yml  webapp_dotnet8_template.json
.github/workflows/: azure-static-web-apps-white-wave-056275403.yml  deploy_node_function_to_function_app.yml  deploy_python_function_to_function_app.yml  main_az204funcappnodejs20250602.yml  main_az204webappjava060525(test).yml  main_az204webappjava060525.yml  main_webappdkh.yml
ConsoleAppUsageMicrosoftGraphAPI/GraphAPIConsoleApp/: GraphAPIConsoleApp.csproj  GraphAPIConsoleApp.sln  Program.cs
active-directory-aspnetcore-webapp-openidconnect-v2-aspnetcore3-1/: appsettings.json
az204javawebappdemo/: Dockerfile  docker-compose.yml  pom.xml  publish_image.md
az204nodejsfunctionappwithbloboutputdemo/: README.md  package.json
az204nodejsfunctionappwithbloboutputdemo/HttpExample/: index.js
az204nodejsfunctionappwithbloboutputdemo/HttpExampleNodeBloboutput/: function.json
az204pythonblobstoragedemo/: pyproject.toml  samplecode.py
az204pythonblobstoragedemo/BlobStorageExample/: BlobSample.txt  samplecode.py
az204pythoncosmosdbdemo/: pyproject.toml  samplecode.py
az204pythoncosmosdbdemo/CosmosDBExample/: samplecode.py
az204pythonfunctionappdemo/: pyproject.toml  requirements.txt
az204pythonfunctionappdemo/HttpExample/: main.py
az204pythonkeyvaultdemo/: samplecode.py
cosmos-dotnet-core-todo-app-main/: .gitignore  cosmos-dotnet-core-todo-app-main.sln
cosmos-dotnet-core-todo-app-main/src/: appsettings.json
(+5 files in other folders)
